kubernetes/apps/datasci/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: datasci
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: privileged
    #istio-injection: enabled
  annotations:
    volsync.backube/privileged-movers: "true"
